@@ -1,8 +1,7 @@
-FROM openjdk:8-jre
+FROM openjdk:9-jre-slim
 COPY ./target/auth-service-0.0.1-SNAPSHOT.jar /workspace/app.jar
 WORKDIR /workspace
 EXPOSE 80
-CMD ["java", "-jar", "app.jar", "--server.port=80"]
+CMD ["java", "--add-modules", "java.xml.bind", "-jar", "app.jar", "--server.port=80"]
 
-HEALTHCHECK --interval=5s --timeout=10s \
-  CMD curl --fail http://localhost/health.json || exit 1
+HEALTHCHECK CMD curl --fail http://localhost/health.json || exit 1
